--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,26 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:attiny85]
+[env:program_vio_ArduinoISP]
 platform = atmelavr
-board = attiny85
 framework = arduino
+board = attiny85
+upload_protocol = custom
+upload_port = COM5
+upload_speed = 19200
+upload_flags = 
+	-C
+	$PROJECT_PACKAGES_DIR/tool-avrdude/avrdude.conf
+	-p
+	$BOARD_MCU
+	-P
+	$UPLOAD_PORT
+	-b
+	$UPLOAD_SPEED
+	-c
+	stk500v1
+upload_command = avrdude $UPLOAD_FLAGS -U flash:w:$SOURCE:i
+lib_deps = 
+	adafruit/TinyWireM@^1.1.3
+	adafruit/TinyLiquidCrystal@^1.2.2
+
