--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:program_vio_ArduinoISP]
+[env:program_via_ArduinoISP]
 platform = atmelavr
 framework = arduino
 board = attiny85
